update freeradius to 3.0.17
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35855 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/freeradius3/debian/changelog
+++ b/src/router/freeradius3/debian/changelog
@@ -1,3 +1,9 @@
+freeradius (3.0.17+git) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- Alan DeKok <aland@freeradius.org>  Thu, 11 Jun 2018 12:00:00 -0500
+
 freeradius (3.0.16+git) unstable; urgency=medium
 
   * New upstream version.
