update pptp-client to 1.10.0 but revert some changes to previous version since 1.10.0 has only one major change. it breaks backward compatbility to older devices using 2.4 kernels like the WRT54G.
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36350 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/pptp-client/ChangeLog
+++ b/src/router/pptp-client/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jan 18 11:10:32 2018  James Cameron  <quozl@laptop.org>
+
+	* pptp-1.10.0: released.
+	  [this file is not maintained, see NEWS and "git log"]
+
 Tue Nov 29 16:13:57 2016  James Cameron  <quozl@laptop.org>
 
 	* pptp-1.9.0: released.
